@@ -4,6 +4,9 @@ class BeakerException(Exception):
     pass
 
 
+class BeakerWarning(RuntimeWarning):
+    """Issued at runtime."""
+
 class CreationAbortedError(Exception):
     """Deprecated."""
 
